Se agrega el logo y el icono de la aplicación
